--- a/src/Extranet/DocumentBundle/Resources/views/Document/ajouter.html.twig
+++ b/src/Extranet/DocumentBundle/Resources/views/Document/ajouter.html.twig
@@ -12,8 +12,6 @@
 
     <h1>Déposer un document</h1>
 
- {#   {{ form(form) }}   #}
-
     {{ form_start(form) }}
 
         <div class="row" id="row_edit_user">
@@ -37,41 +35,25 @@
             <div class="error">{{ form_errors(form.file) }}</div>
         </div></br></br>
 
-    {# <div class="row" id="row_edit_user">
-         <div class="col-md-1"></div>
-         <div class="col-md-2 align_right">{{ form_label(form.active) }}</div>
-         <div class="col-md-4">{{ form_widget(form.active) }}</div>
-     <div class="error">{{ form_errors(form.active) }}</div>
-     </div>
-
-     <div class="col-md-1">
-
-         {{ form_widget(form.submit, { 'label': 'Enregistrer' }) }}
-
-     </div> #}
-
-
         <div class="row" id="row_edit_user">
             <div class="col-md-3"></div>
             <div class="col-md-3 align_right ">
                 <input type="submit" value="Enregistrer le document" class="btn btn-default btn-sm" />
             </div>
-
-                <a href="{{ path('extranet_document_homepage') }}" onclick="return confirm('Retour à la liste des documents (les données saisies seront perdues) ? ')">
+                <a href="{{ path('extranet_document_homepage') }}" onclick="return confirm(
+                        'Retour à la liste des documents (les données saisies seront perdues) ? ')">
                     <button type="button"class="btn btn-default btn-sm">Annuler</button>
                 </a>
-
         </div>
-
 
     {{ form_end(form) }}
 
-    <p>
         <h5>* Champs obligatoires</h5>
-    </p>
+
 
 {% endblock content %}
 
+{#
 {% block javascripts %}
     {{ parent() }}
 
@@ -130,4 +112,4 @@
         }
 
     </script>
- {% endblock javascripts %}
+ {% endblock javascripts %} #}
