--- a/src/Extranet/UtilisateurBundle/Resources/views/Accueil/accueil.html.twig
+++ b/src/Extranet/UtilisateurBundle/Resources/views/Accueil/accueil.html.twig
@@ -14,6 +14,6 @@
 
 {% block content -%}
 
-   <h6> Bonjour {{ app.user.prenom|capitalize }},</BR> Bienvenue sur le site du CE Néo-Soft Bordeaux-Limoges.</h6>
+   <h6> Bonjour {{ app.user.prenom|capitalize }},</BR> Bienvenue sur le site <u><b>PIRATE</b></u> du CE Néo-Soft Bordeaux-Limoges.</h6>
 
 {% endblock content %}
